--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Eixo Visual -->
  <div id="eixoVisual">
-     <img src="./Group 3.png" alt="eixovisual">
+     <img id="eixoVisual" src="./Group 3.png" alt="eixovisual">
   </div> 
 
   <!-- Eixo de Sustentação -->
@@ -42,7 +42,7 @@
         e a modernidade em nossos projetos.
       </p> <br>
    </div>
-   <img id="imagem" src="./image 1.png" alt="escritório de arquitetura">
+   <div id=caixa-imagem><img id="imagem" src="./image 1.png" alt="escritório de arquitetura"> </div>
   </div> 
 
   <!-- Formulário -->
@@ -53,7 +53,7 @@
       <input type="text" placeholder="Nome" name="Name" required > <br>
       <input type="email" placeholder="Email"name="Email" required> <br>
       <input type="hidden" name="Created" value="x-sheetmonkey-current-date-time" />
-      <button type="submit" >Fale Conosco</button>
+      <div><button type="submit" >Fale Conosco</button> </div>
     </form>
   </div>
 <script src="index.js"></script>
